checkpatch-results/home/fedora/lkml-analysis/lkml/1/0000191040.e10aeb39c1d3567f1906ca36162c977c1b7c0672
WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#36: 
> > arch/m68k/kernel/setup.c:215: error: previous declaration of '_end' was here

WARNING:UNKNOWN_COMMIT_ID: Unknown commit id '0de5c2d9f02d2018fd671ca1015432dffa5eb338', maybe rebased or not pulled?
#38: 
> > Caused by commit 0de5c2d9f02d2018fd671ca1015432dffa5eb338 ("param:

WARNING:TYPO_SPELLING: 'availiable' may be misspelled - perhaps 'available'?
#56: 
  - Replace external declarations by proper includes where availiable.
                                                           ^^^^^^^^^^

Some words may have been misspelled.  Consider reviewing them.

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000191040.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 total: 0 errors, 3 warnings, 0 checks, 286 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000191040.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
